--- a/itest/pom.xml
+++ b/itest/pom.xml
@@ -19,11 +19,16 @@
 			<groupId>${project.groupId}</groupId>
 			<version>${project.version}</version>
 		</dependency>
-		<dependency>
-			<artifactId>api</artifactId>
-			<groupId>${project.groupId}</groupId>
-			<version>${project.version}</version>
-		</dependency>
+        <dependency>
+            <groupId>octosan.octosan</groupId>
+            <artifactId>api-one</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>octosan.octosan</groupId>
+            <artifactId>api-two</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
 	</dependencies>
 
 	<build>
